fix: text on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -486,7 +486,12 @@ p.in-container {
   height: 100%;
   width: 100%;
 } #homepage-breakdown .text-box p {
-  font-size: 2rem;
+  font-size: 1.2rem;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: right;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
